set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/Build/Editor/)
set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/Build)

include(FindThreads)

FIND_PACKAGE(SFML COMPONENTS SYSTEM WINDOW GRAPHICS REQUIRED)
FIND_PACKAGE(Boost COMPONENTS system REQUIRED)

link_directories(${Boost_LIBRARY_DIRS})
link_directories(${SFML_LIBRARY_DIRS})

include_directories(
${CMAKE_BINARY_DIR}
${SFML_INCLUDE_DIRS}
${Boost_INCLUDE_DIRS}
${SFGUI_INCLUDE_DIRS}
${CMAKE_SOURCE_DIR}/Editor
${CMAKE_SOURCE_DIR}/
)

file(
GLOB_RECURSE
SHARED_SRC
)

file(
GLOB_RECURSE
EDITOR_SRC
${CMAKE_SOURCE_DIR}/Editor/*
)

file(
GLOB
EDITOR_LIBS
${SFML_LIBRARIES}
${Boost_LIBRARIES}
${CMAKE_THREAD_LIBS_INIT}
)

add_executable(Editor
    ${EDITOR_SRC}
    ${SHARED_SRC})
target_link_libraries(Editor
    ${EDITOR_LIBS})
